Finished admin panel for museums and adding new museums.